@@ -1,5 +1,6 @@
 from Acquisition import aq_parent, aq_inner
 from ftw.contenttemplates.interfaces import IContentTemplatesSettings
+from ftw.contenttemplates.interfaces import IFreshOutOfTheFactory
 from ftw.contenttemplates.interfaces import ICreateFromTemplate
 from plone.memoize import view
 from plone.registry.interfaces import IRegistry
@@ -9,6 +10,7 @@ from Products.CMFCore.utils import getToolByName
 from Products.CMFPlone.interfaces.constrains import ISelectableConstrainTypes
 from zope.component import adapts
 from zope.component import queryUtility
+from zope.interface import alsoProvides
 from zope.interface import implements
 from zope.interface import Interface
 
@@ -43,6 +45,10 @@ class TemplateFactory(object):
                 new_obj.markCreationFlag()
                 # generate a new id, so the id will be renamed after edit
                 new_obj.setId(new_obj.generateUniqueId(new_obj.portal_type))
+
+            # Apply a marker interface used to identify objects created
+            # from a template.
+            alsoProvides(new_obj, IFreshOutOfTheFactory)
 
         return new_obj
 
